# MotifCommunityDetectionMPI

./: CMakeLists.txt  Config.h  generatePoints.h  main.cpp  makefile  time.sh
src/: Config.h  Motif.h  buildDissimilarityMatrix.h  collectMotifTransitions.h  generatePoints.h  main.cpp
